--- a/serverless/functions/ci_cd/deploy.cloudbuild.yaml
+++ b/serverless/functions/ci_cd/deploy.cloudbuild.yaml
@@ -15,6 +15,7 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 
             'admin-add-tweet',
+            '--allow-unauthenticated',
             '--region=europe-west1',
             '--runtime=python38',
             '--entry-point=main',
@@ -40,6 +41,7 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 
             'admin-delete-tweet',
+            '--allow-unauthenticated',
             '--region=europe-west1',
             '--runtime=python38',
             '--entry-point=main',
@@ -66,6 +68,7 @@ steps:
     args: ['functions', 'deploy', 
             'auth',
             '--region=europe-west1',
+            '--allow-unauthenticated',
             '--runtime=python38',
             '--entry-point=main',
             '--trigger-http',
@@ -91,6 +94,7 @@ steps:
     args: ['functions', 'deploy', 
             'clear_tweet_list',
             '--region=europe-west1',
+            '--allow-unauthenticated',
             '--runtime=python38',
             '--entry-point=main',
             '--trigger-http',
@@ -116,6 +120,7 @@ steps:
     args: ['functions', 'deploy', 
             'list_tweet_language',
             '--region=europe-west1',
+            '--allow-unauthenticated',
             '--runtime=python38',
             '--entry-point=main',
             '--trigger-http',
@@ -141,6 +146,7 @@ steps:
     args: ['functions', 'deploy', 
             'list_tweet_location',
             '--region=europe-west1',
+            '--allow-unauthenticated',
             '--runtime=python38',
             '--entry-point=main',
             '--trigger-http',
